[package]
name = "mcuboot-sys"
version = "0.1.0"
authors = ["David Brown <david.brown@linaro.org>"]
description = "A simple wrapper around the mcuboot code."
build = "build.rs"
publish = false
edition = "2018"

[features]
# By default, build with simplistic signature verification.
default = []

# Verify RSA signatures.  Note that at this time, the C code will not
# compile with both sig-rsa and sig-ecdsa enabled.
sig-rsa = []

# Verify ECDSA (secp256r1) signatures.
sig-ecdsa = []

# Overwrite only upgrade
overwrite-only = []

# Disable validation of the primary slot
validate-primary-slot = []

# Encrypt image in the secondary slot using RSA-OAEP-2048
enc-rsa = []

# Encrypt image in the secondary slot using AES-KW-128
enc-kw = []

# Allow bootstrapping an empty/invalid primary slot from a valid secondary slot
bootstrap = []

# Support multiple images (currently 2 instead of 1).
multiimage = []

# Enable SUIT support
suit-manifest = []

[build-dependencies]
cc = "1.0.25"

[dependencies]
lazy_static = "1.2"
libc = "0.2.0"
log = "0.4"
simflash = { path = "../simflash" }

# Optimize some, even when building for debugging, otherwise the tests
# are too slow.
[profile.test]
opt-level = 1
